# gofer-flow

./: .gitignore  AGENTS.md  CLAUDE.md  NOTICE  README.md  gof.spec  implementation_notes.md  implementation_plan.md  pyproject.toml  secret.txt
.github/workflows/: frontend-checks.yml  release.yml
examples/: say-hi-agent.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/browser-tests/: run-studio-browser.cjs  studio-preload-mock.cjs  studio.browser.cjs
frontend/build-resources/: icon.icns  installer.nsh
frontend/electron/: backend-error.html  dev-runner.cjs  error-preload.cjs  ipc-handlers.cjs  main.js  preload.cjs  security.cjs  smoke.cjs
frontend/src/: main.jsx
frontend/src/components/: DagCanvas.jsx
frontend/src/lib/: api.js  workflowPatch.js
frontend/src/pages/: App.jsx  App.test.mjs
frontend/src/styles/: index.css
packaging/arch/: .SRCINFO  .gitignore  PKGBUILD  README.md  gofer-flow  gofer-flow.desktop
packaging/arch-cli/: .SRCINFO  PKGBUILD  README.md
packaging/pyinstaller/: gof_entry.py
scripts/: build-backend-binary.cjs  build-backend-binary.sh  bump-version.cjs  check-frontend-build.sh  package-cli-linux.sh
skills/gofer-flow-workflow-builder/: SKILL.md
skills/gofer-flow-workflow-builder/agents/: openai.yaml
src/agentic_task_manager/cli/: dag_renderer.py  main.py  tui_editor.py
src/agentic_task_manager/cli/commands/: agent.py  builder.py  prompts.py  schedule.py  workflow.py
src/agentic_task_manager/core/: agent.py  executor.py  graph.py  operations.py  scheduler.py  workflow.py
src/agentic_task_manager/subscriptions/: base.py  claude_code.py  codex.py
src/agentic_task_manager/utils/: agent_helpers.py  paths.py  process.py  registry.py
src/gofer/cli/: dag_renderer.py  main.py  tui_editor.py
src/gofer/cli/commands/: agent.py  builder.py  dashboard.py  doctor.py  prompts.py  provider.py  runner.py  schedule.py  watch.py  workflow.py
src/gofer/core/: agent.py  approvals.py  bundles.py  dashboards.py  executor.py  graph.py  health.py  http.py  llm_prompts.py  network_policy.py  operations.py  planner.py  provider_profiles.py  resources.py  revisions.py  run_outputs.py  runner.py  scheduler.py  secrets.py  templates.py  usage.py  validation.py  watcher.py  workflow.py
src/gofer/prompts/: manager.py
src/gofer/subscriptions/: base.py  claude_code.py  codex.py  direct_api.py
src/gofer/ui/: __init__.py  api.py  chat.py  server.py
src/gofer/utils/: logging.py  paths.py  process.py  registry.py  run_state.py
tests/: conftest.py
tests/integration/: test_scheduler_trigger.py  test_workflow_execution.py
tests/regression/: test_end_to_end.py
tests/unit/: test_agent.py  test_approvals.py  test_builder.py  test_cli.py  test_cli_branches.py  test_dag_renderer.py  test_dashboards.py  test_data_dir_isolation.py  test_executor.py  test_fan_out.py  test_graph.py  test_health.py  test_http.py  test_operations.py  test_planner.py  test_process.py  test_prompt_manager.py  test_provider_profiles.py  test_release_scripts.py  test_release_workflow.py  test_runner.py  test_scheduler.py  test_subscriptions.py  test_tui_editor.py  test_ui_api.py  test_ui_chat.py  test_ui_server.py  test_usage.py  test_watcher.py  test_webhook_triggers.py  test_workflow_bundles.py  test_workflow_parameters.py  test_workflow_resources.py  test_workflow_revisions.py  test_workflow_templates.py  test_workflow_validation.py
