[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-task-manager"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "apscheduler>=3.10",
    "networkx>=3.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "rich>=13.7",
    "anyio>=4.4",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
atm = "agentic_task_manager.cli.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
