[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gofer-flow"
version = "0.1.1"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "apscheduler>=3.10",
    "networkx>=3.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "rich>=13.7",
    "anyio>=4.4",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "tomli-w>=1.0",
    "questionary>=2.0",
    "tzdata>=2026.2",
]

[project.optional-dependencies]
xlsx = [
    "openpyxl>=3.1",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
gof = "gofer.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gofer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["networkx", "networkx.*", "tomli_w", "apscheduler", "apscheduler.*", "openpyxl", "openpyxl.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
# Keep application code strict while allowing pytest monkeypatches, fixtures, and
# dynamic assertions to remain concise. The tests are still included in
# `mypy src tests` so import/type regressions outside these test-only patterns
# are checked.
disable_error_code = [
    "arg-type",
    "attr-defined",
    "call-overload",
    "no-untyped-def",
    "str-bytes-safe",
    "union-attr",
    "unused-ignore",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
